--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
-  "name": "MarksButton",
+  "name": "temp",
   "version": "1.0.0",
-  "description": "boi",
-  "main": "server.js",
-  "bin": "bin.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "package": "",
-    "start": "node server.js",
-    "appId": "com.myapp.id"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "appId": "com.myapp.id",
-  "build": {
-    "appId": "com.myapp.id"
-  },
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
+    "johnny-five": "^1.3.1",
     "node-notifier": "^6.0.0",
-    "pkg": "^4.4.0"
-  },
-  "pkg":{
-    "targets": [
-      "win"
-    ],
-    "appId": "com.myapp.id"
+    "robotjs": "^0.5.1"
   }
 }
